# multipart-example

./: Cargo.toml
src/: api.rs  lib.rs  multipart.rs  result.rs
src/command/: list_equipment.rs  mod.rs
