[package]
name = "multipart-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
arma-rs = { git = "https://github.com/BrettMayson/arma-rs.git", branch = "main" }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.164"
serde_json = "1.0.97"
uuid = { version = "1.3.4", features = ["v4"] }